--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test_task",
   "version": "4.0",
-  "homepage":"",
+  "homepage":"http://makkob.github.io/PUG",
   "description": "test_task",
   "main": "src/app.js",
   "repository": "",
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "rimraf dist && webpack --env mode=development --config ./build/webpack.config.js --progress",
     "dev": "webpack serve --env mode=development --config ./build/webpack.config.js --progress",
-    "prod": "rimraf dist && webpack --env mode=production --config ./build/webpack.config.js --progress"
+    "prod": "rimraf dist && webpack --env mode=production --config ./build/webpack.config.js --progress",
+    "deploy":"gh-pages -d build"
   },
   "resolutions": {
     "upath": "1.1.1"
