--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rimraf dist && webpack --env mode=development --config ./build/webpack.config.js --progress",
     "dev": "webpack serve --env mode=development --config ./build/webpack.config.js --progress",
     "prod": "rimraf dist && webpack --env mode=production --config ./build/webpack.config.js --progress",
-    "deploy":"gh-pages -d build"
+    "deploy":"gh-pages -d dist"
   },
   "resolutions": {
     "upath": "1.1.1"
